# privateer

./: Cargo.toml  README.md  index.html  logo.pxi  styles.css
.github/workflows/: release.yml
assets/: style.css
crates/pb-wire-types/: Cargo.toml
crates/pb-wire-types/src/: lib.rs
plans/: 2026-02-18-iti-ui.md
src/: app.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs
src/app/: detail.rs  downloads.rs  settings.rs  watching.rs
