[package]
name = "privateer-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
futures-lite = "2.6.0"
human-repr = "1.1.0"
iti = { git = "https://github.com/schell/iti.git", default-features = false, features = ["embed-assets", "system9"] }
log.workspace = true
privateer-wire-types = { path = "crates/pb-wire-types" }
mogwai = { version = "0.7.2" }
serde.workspace = true
serde_json = "1.0"
serde-wasm-bindgen = "0.6"

[dependencies.web-sys]
version = "0.3"
features = [
  "Storage"
]

[workspace]
members = [
  "crates/pb-wire-types",
  "src-tauri"
]

[workspace.dependencies]
log = "0.4.27"
serde = { version = "1", features = ["derive"] }
