[package]
name = "privateer"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "privateer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
env_logger = "0.11.8"
log.workspace = true
privateer-wire-types = { path = "../crates/pb-wire-types" }
piratebay = { version = "0.2", git = "https://github.com/schell/piratebay" }
serde.workspace = true
serde_json = "1"
snafu = "0.8"
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tokio = { version = "1.45", features = ["sync"] }
transmission-rpc = "0.5"
url = "2"
